fix(delete): Fix underflow not functioning properly causing delete queries to not function properly